Add custom widget templates to render the tags on the CompendiumEntryForm. Fixes #2.

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -18,6 +18,10 @@ html {
   height: 2rem;
 }
 
+.tagname {
+  font-family: monospace, courier, sans-serif;
+}
+
 /*****************************
  * CSS for dashboard sidebar
  *****************************/
