Add a view for a landing page to the site.

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -28,7 +28,11 @@
   </head>
 
   <body>
-    {% block body %}{% endblock %}
+    {% include "includes/navbar.html" %}
+    <div class="uk-container">
+      {% block body %}
+      {% endblock %}
+    </div>
   </body>
 
   {% comment %}
