Center container defined in the base template inside the <body></body> tags.

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -29,7 +29,7 @@
 
   <body>
     {% include "includes/navbar.html" %}
-    <div class="uk-container">
+    <div class="uk-container uk-container-center">
       {% block body %}
       {% endblock %}
     </div>
