--- a/src/templates/includes/navbar.html
+++ b/src/templates/includes/navbar.html
@@ -2,20 +2,25 @@
 Navigation bar across the top of the site for the researcher view.
 {% endcomment %}
 
-<nav class="uk-navbar uk-navbar-attached" id="navbar">
-  {# Left part of navbar #}
+<nav class="site-navbar uk-navbar uk-navbar-attached" id="navbar">
+  {# Link back to landing page #}
   <a class="uk-navbar-brand" href="{% url 'research dashboard' %}">
     The Encryption Compendium
   </a>
 
+  {% comment %}
+  {# Search bar #}
   <div class="uk-navbar-content uk-hidden-small">
     <form class="uk-form uk-margin-remove uk-display-inline-block">
-      <input type="text" placeholder="Search...">
+      <div class="uk-form-icon">
+        <i class="uk-icon-search"></i>
+        <input type="text" placeholder="Search...">
+      </div>
       <button class="uk-button uk-button-primary uk-margin-left">Submit</button>
     </form>
   </div>
+  {% endcomment %}
 
-  {# Right part of navbar #}
   <div class="uk-navbar-flip">
     <ul class="uk-navbar-nav">
 
