--- a/src/templates/landing_page.html
+++ b/src/templates/landing_page.html
@@ -5,4 +5,26 @@ Template for the landing page for the site.
 {% endcomment %}
 
 {% block body %}
+<div class="uk-text-center uk-margin-top">
+  <h1 class="uk-heading-large uk-text-break">
+    Encryption Compendium
+  </h1>
+</div>
+
+<div class="uk-text-center uk-margin-top">
+  <div class="uk-container-center uk-width-medium-1-2 uk-panel uk-panel-box">
+    <form class="uk-search" data-uk-search="">
+      <div class="uk-form-icon">
+        <i class="uk-icon-search"></i>
+        <input class="uk-search-field uk-form-blank uk-form-width-large" type="search" placeholder="Search...">
+      </div>
+    </form>
+  </div>
+</div>
+
+<div class="uk-grid uk-width-medium-8-10 uk-container-center uk-text-break uk-margin-top">
+  <a class="uk-panel uk-panel-box uk-panel-box-primary" href="#">
+    encryption
+  </a>
+</div>
 {% endblock %}
