Add a footer to the site. Fixes #14.

--- a/src/templates/landing_page.html
+++ b/src/templates/landing_page.html
@@ -11,15 +11,8 @@ Template for the landing page for the site.
   </h1>
 </div>
 
-<div class="uk-text-center uk-margin-top">
-  <div class="uk-container-center uk-width-medium-1-2 uk-panel uk-panel-box">
-    <form class="uk-search" data-uk-search="">
-      <div class="uk-form-icon">
-        <i class="uk-icon-search"></i>
-        <input class="uk-search-field uk-form-blank uk-form-width-large" type="search" placeholder="Search...">
-      </div>
-    </form>
-  </div>
+<div class="uk-text-center uk-margin-top uk-container-center uk-width-medium-1-2">
+  {% include "includes/searchbar.html" %}
 </div>
 
 <div class="uk-grid uk-width-medium-8-10 uk-container-center uk-text-break uk-margin-top">
