--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -2,6 +2,7 @@
 {% spaceless %}
 {% load static %}
 <html>
+
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -29,22 +30,24 @@
 
   <body>
     {% include "includes/navbar.html" %}
+
     <div class="uk-container uk-container-center">
       {% block body %}
       {% endblock %}
     </div>
+
+    {% include "includes/footer.html" %}
   </body>
 
   {% comment %}
   Put JavaScript at the bottom of the page to make it load faster.
-  Note that templates that override the 'javascripts' block will need to insert {{ block.super }}
-  if they want to keep the JavaScript that's inserted below.
+  Note that templates that override the 'javascripts' block will need to insert
+  {{ block.super }} to keep the JavaScript that's inserted below.
   {% endcomment %}
   {% block javascripts %}
   <script type="application/javascript" src="{% static 'js/jquery-3.4.1.min.js' %}"></script>
-  {# <script type="application/javascript" src="{% static 'js/bootstrap.bundle.min.js' %}"></script> #}
-
   <script type="application/javascript" src="{% static 'js/uikit.min.js' %}"></script>
   {% endblock %}
+
 </html>
 {% endspaceless %}
