--- a/src/templates/includes/footer.html
+++ b/src/templates/includes/footer.html
@@ -2,7 +2,7 @@
 A site-wide footer with credits, contact information, etc.
 {% endcomment %}
 
-<div class="uk-block uk-block-secondary uk-margin-top uk-position-bottom uk-contrast uk-text-break">
+<footer class="footer uk-block uk-block-secondary uk-margin-top uk-contrast uk-text-break">
   <div class="uk-container-center uk-width-small-8-10">
     <div class="uk-grid uk-grid-divider">
       <div class="uk-width-4-10">
@@ -36,4 +36,4 @@ A site-wide footer with credits, contact information, etc.
       </div>
     </div>
   </div>
-</div>
+</footer>
