--- a/src/templates/includes/navbar.html
+++ b/src/templates/includes/navbar.html
@@ -4,7 +4,7 @@ Navigation bar across the top of the site for the researcher view.
 
 <nav class="site-navbar uk-navbar uk-navbar-attached" id="navbar">
   {# Link back to landing page #}
-  <a class="uk-navbar-brand" href="{% url 'research dashboard' %}">
+  <a class="uk-navbar-brand" href="{% url 'landing page' %}">
     The Encryption Compendium
   </a>
 
@@ -33,7 +33,7 @@ Navigation bar across the top of the site for the researcher view.
         <div id="user-settings-dropdown-menu" class="uk-dropdown uk-dropdown-navbar uk-dropdown-top">
           <ul class="uk-nav uk-nav-dropdown">
             <li>
-              <a href="{% url 'research dashboard' %}">Home</a>
+              <a href="{% url 'research dashboard' %}">Dashboard</a>
             </li>
             <li>
               <a href="{% url 'research profile' %}">Profile</a>
@@ -44,6 +44,7 @@ Navigation bar across the top of the site for the researcher view.
             <li>
               <a class="dropdown-item" id="my-entries" href="{% url 'research my entries' %}">My entries</a>
             </li>
+            <li class="uk-nav-divider"></li>
             <li>
               <a href="{% url 'research logout' %}" id="logout-button">Logout</a>
             </li>
