adding changes for published date field

--- a/src/templates/new_article.html
+++ b/src/templates/new_article.html
@@ -11,17 +11,56 @@
 
 {% block contents %}
 {{ block.super }}
+{% if form.errors %}
+    <span class="d-flex justify-content-center">
+      <div class="uk-alert uk-alert-danger" role="alert">
+        <div class="text-center">
+          {% for error in form.errors %}
+            {% if error == "year" or error == "month" or error == "day" %}
+              Incorrect value in the {{ error|title }} field.
+              {% if error == "year" %}
+                Allowed range: 1900 to current year
+              {% endif %}
+            {% endif %}
+          {% endfor %}
+        </div>
+      </div>
+    </span>
+  {% endif %}
 <form class="uk-panel uk-panel-box uk-form" method="POST">
   {% csrf_token %}
-
+  
   <div class="uk-margin-bottom">
     <fieldset class="uk-margin-bottom">
       {% for field in form %}
-      <h2 class="uk-h2 uk-text-bold">{{ field.label }}</h2>
-      {% if field.help_text %}
-      <p class="uk-text-break">{{ field.help_text }}</p>
-      {% endif %}
-      {{ field }}
+        {% if field.label == "Year" %}
+          <h2 class="uk-h2 uk-text-bold">Published date</h2>
+          <p class="uk-text-break">If any of the year/month/day field is unknown, leave blank</p>
+          <div class="uk-grid">
+            <div class="uk-width-1-3">
+        {% endif %}
+        {% if field.label == "Month" or field.label == "Day" %}
+            <div class="uk-width-1-3">
+        {% endif %}
+        {% if field.label == "Month" or field.label == "Day" or field.label == "Year" %}
+          <h3 class="uk-h3">{{ field.label }}</h3>
+        {% else %}
+          <h2 class="uk-h2 uk-text-bold">{{ field.label }}</h2>
+        {% endif %}
+        {% if field.help_text %}
+        <p class="uk-text-break">{{ field.help_text }}</p>
+        {% endif %}
+          {{ field }}
+        {% if field.label == "Year" %}
+            </div>
+        {% endif %}
+        {% if field.label == "Month" %}
+            </div>
+        {% endif %}
+        {% if field.label == "Day" %}
+            </div>
+          </div>
+        {% endif %}
       {% endfor %}
     </fieldset>
   </div>
