adding publisher field to the compendium entry model and form

--- a/src/templates/dashboard.html
+++ b/src/templates/dashboard.html
@@ -58,6 +58,7 @@
           <th scope="col">URL</th>
           <th scope="col">Tags</th>
           <th scope="col">Owner</th>
+          <th scope="col">Publisher</th>
         </tr>
       </thead>
       <tbody>
@@ -74,6 +75,7 @@
               </td>
               <td>{{ entry.tags }}</td>
               <td>{{ entry.owner }}</td>
+              <td>{{ entry.publisher_name }}</td>
           </tr>
           {%endfor%}
       </tbody>
