changes to add authors field to compendium entries

--- a/src/templates/dashboard.html
+++ b/src/templates/dashboard.html
@@ -59,6 +59,7 @@
           <th scope="col">Tags</th>
           <th scope="col">Owner</th>
           <th scope="col">Publisher</th>
+          <th scope="col">Authors</th>
         </tr>
       </thead>
       <tbody>
@@ -76,6 +77,7 @@
               <td>{{ entry.tags }}</td>
               <td>{{ entry.owner }}</td>
               <td>{{ entry.publisher_name }}</td>
+              <td>{{ entry.authors }}</td>
           </tr>
           {%endfor%}
       </tbody>
