--- a/src/templates/new_article.html
+++ b/src/templates/new_article.html
@@ -62,8 +62,34 @@
           </div>
         {% endif %}
       {% endfor %}
+      <section class="uk-margin-top" id="author-input">
+        <h2 class="uk-h2 uk-text-bold">Authors</h2>
+        <input type="text" id="number-of-authors" name="number-of-authors" value="">   Number of authors: (max. 20)<br />
+        <a href="#author-input" id="filldetails" onclick="addFields()">Fill Details</a>
+        <div id="container"/>
+      </section>
     </fieldset>
   </div>
+
+  <script>
+    function addFields(){
+            var number = document.getElementById("number-of-authors").value;
+            if (number <= 20) {
+              var container = document.getElementById("container");
+              while (container.hasChildNodes()) {
+                  container.removeChild(container.lastChild);
+              }
+              for (i=0;i<number;i++){
+                  container.appendChild(document.createTextNode("Author " + (i+1)));
+                  var input = document.createElement("input");
+                  input.type = "text";
+                  input.name = "authors_text";
+                  container.appendChild(input);
+                  container.appendChild(document.createElement("br"));
+              }
+            }
+        }
+  </script>
 
   <button id="entry-submit-button" class="uk-button uk-margin-top" type="submit">
     {% if edit is True %}
