changes to allow user edit authors

--- a/src/templates/new_article.html
+++ b/src/templates/new_article.html
@@ -62,18 +62,30 @@
           </div>
         {% endif %}
       {% endfor %}
-      <section class="uk-margin-top" id="author-input">
-        <h2 class="uk-h2 uk-text-bold">Authors</h2>
-        <input type="text" id="number-of-authors" name="number-of-authors" value="">   Number of authors: (max. 20)<br />
-        <a href="#author-input" id="filldetails" onclick="addFields()">Fill Details</a>
-        <div id="container"/>
-      </section>
+      {% if edit is True %}
+        <section class="uk-margin-top" id="author-input">
+          <h2 class="uk-h2 uk-text-bold">Authors</h2>
+          <input type="text" id="number-of-authors" name="number-of-authors" value="{{ num_of_authors }}"">   Number of authors: (max. 20)<br />
+          <a href="#author-input" id="filldetails" onclick="addFields(true)">Edit Authors</a>
+          <div id="container"/>
+        </section>
+      {% else %}
+        <section class="uk-margin-top" id="author-input">
+          <h2 class="uk-h2 uk-text-bold">Authors</h2>
+          <input type="text" id="number-of-authors" name="number-of-authors" value="">   Number of authors: (max. 20)<br />
+          <a href="#author-input" id="filldetails" onclick="addFields()">Fill Details</a>
+          <div id="container"/>
+        </section>
+      {% endif %}
     </fieldset>
   </div>
 
   <script>
-    function addFields(){
+    function addFields(edit=false){
             var number = document.getElementById("number-of-authors").value;
+            if (edit){
+                    var authors_array = {{ authors|safe }}; 
+            }
             if (number <= 20) {
               var container = document.getElementById("container");
               while (container.hasChildNodes()) {
@@ -84,6 +96,9 @@
                   var input = document.createElement("input");
                   input.type = "text";
                   input.name = "authors_text";
+                  if (edit){
+                    input.value = authors_array[i];
+                  }
                   container.appendChild(input);
                   container.appendChild(document.createElement("br"));
               }
