--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -31,7 +31,7 @@
   <body>
     {% include "includes/navbar.html" %}
 
-    <div class="uk-container uk-container-center">
+    <div class="content uk-width-8-10 uk-container uk-container-center">
       {% block body %}
       {% endblock %}
     </div>
