--- a/src/templates/includes/footer.html
+++ b/src/templates/includes/footer.html
@@ -2,7 +2,13 @@
 A site-wide footer with credits, contact information, etc.
 {% endcomment %}
 
-<footer class="footer uk-block uk-block-secondary uk-margin-top uk-contrast uk-text-break">
+{% comment %}
+Add some padding between the footer and the element above it
+{% endcomment %}
+
+<div class="uk-margin-top"></div>
+
+<footer class="uk-block uk-block-secondary uk-contrast uk-text-break">
   <div class="uk-container-center uk-width-small-8-10">
     <div class="uk-grid uk-grid-divider">
       <div class="uk-width-4-10">
