Remove extra quotation mark in the new_article.html template.

--- a/src/templates/new_article.html
+++ b/src/templates/new_article.html
@@ -65,7 +65,7 @@
       {% if edit is True %}
         <section class="uk-margin-top" id="author-input">
           <h2 class="uk-h2 uk-text-bold">Authors</h2>
-          <input type="text" id="number-of-authors" name="number-of-authors" value="{{ num_of_authors }}"">   Number of authors: (max. 20)<br />
+          <input type="text" id="number-of-authors" name="number-of-authors" value="{{ num_of_authors }}">   Number of authors: (max. 20)<br />
           <a href="#author-input" id="filldetails" onclick="addFields(true)">Edit Authors</a>
           <div id="container"/>
         </section>
