Change the UIkit default CSS, and remove some old UIkit CSS files.

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -19,7 +19,7 @@
     {% block css %}
 
     {# UIkit stylesheet #}
-    <link rel="stylesheet" href="{% static 'css/uikit.gradient.min.css' %}"/>
+    <link rel="stylesheet" href="{% static 'css/uikit.min.css' %}"/>
 
     {# Custom stylesheets #}
     <link rel="stylesheet" href="{% static 'css/style.css' %}"/>
