--- a/src/templates/new_article.html
+++ b/src/templates/new_article.html
@@ -19,7 +19,7 @@ the edit form, and another that allows you to display the form.
 {% endcomment %}
 
 {% if edit %}
-{% include "form_templates/compendium_entry_edit_form.html" with form=form edit=edit only %}
+{% include "form_templates/compendium_entry_edit_form.html" with form=new_entry_form edit=edit only %}
 {% else %}
 <ul class="uk-tab" data-uk-tab="{connect:'#upload_form'}">
   <li class="uk-active">
@@ -32,10 +32,10 @@ the edit form, and another that allows you to display the form.
 
 <ul id="upload_form" class="uk-list uk-switcher">
   <li>
-    {% include "form_templates/compendium_entry_edit_form.html" with form=form edit=edit only %}
+    {% include "form_templates/compendium_entry_edit_form.html" with form=new_entry_form edit=edit only %}
   </li>
   <li>
-    {% include "form_templates/bibtex_upload_form.html" with form=form %}
+    {% include "form_templates/bibtex_upload_form.html" with form=bibtex_form only %}
   </li>
 </ul>
 {% endif %}
