Save data stored in the BibTexUploadForm as CompendiumEntries.

--- a/src/templates/form_templates/bibtex_upload_form.html
+++ b/src/templates/form_templates/bibtex_upload_form.html
@@ -2,6 +2,12 @@
 A form for uploading compendium entries as BibTeX
 {% endcomment %}
 
+{% if form.non_field_errors %}
+<div class="uk-alert uk-alert-danger" role="alert">
+  {{ form.non_field_errors }}
+</div>
+{% endif %}
+
 <fieldset>
   <div class="uk-grid uk-grid-divider">
       {# File upload #}
@@ -9,6 +15,11 @@ A form for uploading compendium entries as BibTeX
         <h2 class="uk-h2">
           Upload a <span class="monospace">.bib</span> file
         </h2>
+
+        {% if form.bibtex_file.errors %}
+          {{ form.bibtex_file.errors }}
+        {% endif %}
+
         {{ form.bibtex_file }}
       </div>
 
@@ -17,6 +28,11 @@ A form for uploading compendium entries as BibTeX
         <h2 class="uk-h2">
           Enter BibTeX manually
         </h2>
+
+        {% if form.bibtex_entry.errors %}
+          {{ form.bibtex_entry.errors }}
+        {% endif %}
+
         <div class="uk-width-1-1 uk-margin-top">
           {{ form.bibtex_entry }}
         </div>
