--- a/src/templates/form_templates/compendium_entry_edit_form.html
+++ b/src/templates/form_templates/compendium_entry_edit_form.html
@@ -2,55 +2,54 @@
 Form for creating new compendium entries, and for editing them.
 {% endcomment %}
 
-{% if form.errors %}
-  <span class="d-flex justify-content-center">
-    <div class="uk-alert uk-alert-danger" role="alert">
-      <div class="text-center">
-        {% for error in form.errors %}
-          {% if error == "year" or error == "month" or error == "day" %}
-            Incorrect value in the {{ error|title }} field.
-            {% if error == "year" %}
-              Allowed range: 1900 to current year
-            {% endif %}
-          {% endif %}
-        {% endfor %}
-      </div>
-    </div>
-  </span>
+{% if form.non_field_errors or form.errors %}
+<div class="uk-alert uk-alert-danger" role="alert">
+  {% if form.non_field_errors %}
+    {{ form.non_field_errors }}
+  {% else %}
+    {% if edit %}
+      Some errors were detected while trying to edit the entry.
+    {% else %}
+      Some errors were detected while trying to upload the new entry.
+    {% endif %}
+  {% endif %}
+</div>
 {% endif %}
 
 <div class="uk-margin-bottom">
+  <p>
+    <span class="uk-text-danger">*</span> = required field
+  </p>
+
   <fieldset class="uk-margin-bottom">
-    {% for field in form %}
-      {% if field.label == "Year" %}
-        <h2 class="uk-h2 uk-text-bold">Published date</h2>
-        <p class="uk-text-break">If any of the year/month/day field is unknown, leave blank</p>
-        <div class="uk-grid">
-          <div class="uk-width-1-3">
-      {% endif %}
-      {% if field.label == "Month" or field.label == "Day" %}
-          <div class="uk-width-1-3">
-      {% endif %}
-      {% if field.label == "Month" or field.label == "Day" or field.label == "Year" %}
-        <h3 class="uk-h3">{{ field.label }}</h3>
-      {% else %}
-        <h2 class="uk-h2 uk-text-bold">{{ field.label }}</h2>
-      {% endif %}
-      {% if field.help_text %}
-      <p class="uk-text-break">{{ field.help_text }}</p>
-      {% endif %}
-        {{ field }}
-      {% if field.label == "Year" %}
-          </div>
-      {% endif %}
-      {% if field.label == "Month" %}
-          </div>
-      {% endif %}
-      {% if field.label == "Day" %}
-          </div>
-        </div>
-      {% endif %}
-    {% endfor %}
+    {% include 'includes/generic_form_field.html' with field=form.title %}
+
+    {# -- START DATE SELECTOR WIDGET -- #}
+    {% comment %}
+    Construct the date selector widget manually
+    {% endcomment %}
+
+    {% with label="Publication date" %}
+    {% with help_text="Date the entry was published." %}
+      {% include 'includes/generic_form_field_header.html' with label=label help_text=help_text only %}
+    {% endwith %}
+    {% endwith %}
+
+    {% include 'includes/generic_form_field_errors.html' with errors=form.day.errors only %}
+    {% include 'includes/generic_form_field_errors.html' with errors=form.month.errors only %}
+    {% include 'includes/generic_form_field_errors.html' with errors=form.year.errors only %}
+
+    {{ form.day }}
+    {{ form.month }}
+    {{ form.year }}
+
+    {# -- END DATE SELECTOR WIDGET -- #}
+
+    {% include 'includes/generic_form_field.html' with field=form.abstract %}
+    {% include 'includes/generic_form_field.html' with field=form.publisher_text %}
+    {% include 'includes/generic_form_field.html' with field=form.url %}
+    {% include 'includes/generic_form_field.html' with field=form.tags %}
+
     {% if edit is True %}
       <section class="uk-margin-top" id="author-input">
         <h2 class="uk-h2 uk-text-bold">Authors</h2>
