--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -45,8 +45,28 @@ footer {
 }
 
 /****************************
- * CSS for forms
+ * CSS for tags
  ****************************/
+.tag-selector-button {
+  font-family: sans-serif, arial, monospace;
+  color: black;
+  border-color: black;
+  background-color: #f8f8f8;
+}
+
+.tag-selector-button:hover {
+  color: #f8f8f8;
+  background-color: #999;
+}
+
+.tag-selector-button.uk-active {
+  color: #f8f8f8;
+  background-color: #444444 !important;
+}
+
+br.sep {
+  margin-top: 2em;
+}
 
 /****************************
  * CSS for auth-related components
