--- a/src/templates/landing_page.html
+++ b/src/templates/landing_page.html
@@ -19,18 +19,31 @@ Template for the landing page for the site.
   ... or search for the following tags:
 </h2>
 
-<div style="margin-top: 3rem;"></div>
+<br class="sep">
 
-<div class="uk-width-medium-8-10 uk-container-center uk-text-break uk-margin-top">
-  <div class="uk-grid uk-grid-small" data-uk-grid-margin="">
-    {% for tag in tags %}
-    <div>
-      <a class="uk-panel uk-panel-box uk-panel-box-primary" href="#">
-        {{ tag.tagname }}
-      </a>
+<form method="GET" class="uk-form">
+  <div class="uk-width-medium-8-10 uk-container-center uk-text-break" style="min-height: 30em;">
+    <div class="uk-grid uk-grid-small" data-uk-grid-margin="" data-uk-button-checkbox="">
+      {% for tag in tags %}
+      <div>
+        <button type="button" class="uk-button tag-selector-button uk-button-large">
+          {{ tag.tagname }}
+        </button>
+      </div>
+      {% endfor %}
     </div>
-    {% endfor %}
+
+    <br class="sep">
+
+    <div class="uk-text-center">
+      <button class="uk-margin-top" type="submit" name="tag-search">
+        <span class="uk-article-lead">
+          <i class="uk-icon-long-arrow-right"></i>
+          Search
+        </span>
+      </button>
+    </div>
   </div>
-</div>
+</form>
 
 {% endblock %}
