Make small modifications to styling.

--- a/src/templates/includes/searchbar.html
+++ b/src/templates/includes/searchbar.html
@@ -6,7 +6,7 @@ Template for a generic searchbar for the site.
   <fieldset data-uk-margin="">
     <div class="uk-form-icon">
       <i class="uk-icon-search"></i>
-      <input class="uk-search-field uk-form-blank uk-form-width-large" type="search" placeholder="Search...">
+      <input class="uk-form-width-large" type="search" placeholder="Search...">
     </div>
   </fieldset>
 </form>
