--- a/src/templates/new_tag.html
+++ b/src/templates/new_tag.html
@@ -5,53 +5,70 @@
 
 {% block contents %}
 {{ block.super }}
-<form method="POST">
+<form class="uk-form" method="POST">
   {% csrf_token %}
 
-  {% if success or form.non_field_errors %}
-  <span class="d-flex justify-content-center">
-    {% if success %}
-    <div class="alert alert-success mx-auto">
-      Successfully created new tag.
-    </div>
-    {% else %}
-    <div class="alert alert-danger mx-auto" role="alert">
-      An error occurred: {{ form.non_field_errors }}
-    </div>
-    {% endif %}
+  {% if success %}
+  <span class="uk-alert uk-alert-success" role="alert">
+    Successfully created new tag
   </span>
   {% endif %}
 
-  <div class="container float-left">
-    <div class="row">
-      {% for field in form %}
+  {% if form.non_field_errors %}
+  <span class="uk-alert uk-alert-danger" role="alert">
+    {{ form.non_field_errors }}
+  </span>
+  {% endif %}
 
-      <div class="col-2 mb-3">
-        <p>{{ field.label }}</p>
-      </div>
-      <div class="col-8 mb-3">
-        {{ field }}
+  <fieldset class="uk-margin-bottom">
+    {% for field in form %}
+      {% include 'includes/generic_form_field.html' with field=field %}
+    {% endfor %}
+  </fieldset>
 
-        <br>
+  <button id="tag-submit-button" class="uk-button uk-button-primary" type="submit">
+    Add new tag
+  </button>
+</form>
 
-        {% comment %}
-        Display any errors associated with this field that may have occurred
-        when we try to add a new tag.
-        {% endcomment %}
-        {% include "includes/field_errors.html" with errors=field.errors only %}
-      </div>
-      <div class="w-100"></div>
-      {% endfor %}
+<br class="sep">
 
-    </div>
-    <button id="tag-submit-button" class="btn btn-primary" type="submit">
-      Add new tag
-    </button>
-  </div>
+<div class="uk-width-1-1 uk-text-center uk-margin-bottom">
+  <h2 class="uk-h2 uk-text-bold">
+    Current tags
+  </h2>
+</div>
+
+<form class="uk-form" method="POST">
+  {% csrf_token %}
 
   {# Display all of the tags that already exist #}
-  {% for tag in existing_tags %}
-    <p>{{ tag.tagname }}</p>
-  {% endfor %}
+  <div class="uk-grid uk-grid-small" data-uk-margin="">
+    {% for tag in tags %}
+    <div>
+      <div class="uk-panel uk-panel-box">
+        {{ tag.tagname }}
+        <a href="#kill-tag-{{ tag.id }}" data-uk-modal="">
+          <i class="uk-margin-left uk-text-danger uk-icon-close"></i>
+        </a>
+      </div>
+    </div>
+
+    {# Modal that allows users to completely kill a tag #}
+    <div id="kill-tag-{{ tag.id }}" class="uk-modal">
+      <div class="uk-modal-dialog">
+        <a class="uk-modal-close uk-close" href=""></a>
+        <div class="uk-modal-header">
+          <h3 class="uk-h3">
+            Are you sure you want to delete this tag?
+          </h3>
+        </div>
+      </div>
+    </div>
+    {% endfor %}
+  </div>
 </form>
+
+<br class="sep">
+
 {% endblock %}
