--- a/src/templates/form_templates/compendium_entry_edit_form.html
+++ b/src/templates/form_templates/compendium_entry_edit_form.html
@@ -25,6 +25,7 @@ Form for creating new compendium entries, and for editing them.
     {% include 'includes/generic_form_field.html' with field=form.title %}
 
     {# -- START DATE SELECTOR WIDGET -- #}
+
     {% comment %}
     Construct the date selector widget manually
     {% endcomment %}
@@ -39,9 +40,23 @@ Form for creating new compendium entries, and for editing them.
     {% include 'includes/generic_form_field_errors.html' with errors=form.month.errors only %}
     {% include 'includes/generic_form_field_errors.html' with errors=form.year.errors only %}
 
-    {{ form.day }}
-    {{ form.month }}
-    {{ form.year }}
+    <div class="uk-grid uk-grid-small uk-width-4-10" data-uk-margin="">
+      {# Labels #}
+      <div class="uk-width-2-10 uk-text-bold">
+        <label class="uk-form-label" for="day">{{ form.day.label }}</label>
+      </div>
+      <div class="uk-width-4-10 uk-text-bold">
+        <label for="month" class="uk-form-label">{{ form.month.label }}</label>
+      </div>
+      <div class="uk-width-4-10 uk-text-bold">
+        <label for="year" class="uk-form-label">{{ form.year.label }}</label>
+      </div>
+
+      {# Fields #}
+      <div class="uk-width-2-10">{{ form.day }}</div>
+      <div class="uk-width-4-10">{{ form.month }}</div>
+      <div class="uk-width-4-10">{{ form.year }}</div>
+    </div>
 
     {# -- END DATE SELECTOR WIDGET -- #}
 
