Improve how compendium entries are displayed to their owner in the research dashboard. Fixes #32.

--- a/src/templates/new_article.html
+++ b/src/templates/new_article.html
@@ -86,6 +86,8 @@ function addFields(edit=false){
   }
 }
 </script>
+{% comment %}
+Markdown support
 <script src="{% static 'codemirror/lib/codemirror.js' %}"></script>
 <script src="{% static 'codemirror/mode/markdown/markdown.js' %}"></script>
 <script src="{% static 'codemirror/addon/mode/overlay.js' %}"></script>
@@ -93,4 +95,5 @@ function addFields(edit=false){
 <script src="{% static 'codemirror/mode/gfm/gfm.js' %}"></script>
 <script src="{% static 'js/marked.min.js' %}"></script>
 <script src="{% static 'js/components/htmleditor.min.js' %}"></script>
+{% endcomment %}
 {% endblock %}
