--- a/src/templates/dashboard.html
+++ b/src/templates/dashboard.html
@@ -7,81 +7,44 @@
 
 {{ block.super }}
 {% load static %}
-<div class="container mx-md-n5">
-  <ul class="uk-list">
+<ul class="uk-text-large uk-nav uk-nav-side uk-panel uk-panel-box uk-width-medium-3-10">
 
-    {# Button to add new compendium entries #}
-    <li>
-      <a id="new_article_link" href="{% url 'research new article' %}">
-        <button class="uk-button uk-button-primary">
-          <div class="my-1">
-            <i class="uk-icon-justify uk-icon-plus"></i>
-            Add new compendium entry
-          </div>
-        </button>
-      </a>
-    </li>
+  {# Button to add new compendium entries #}
+  <li>
+    <a id="new_article_link" href="{% url 'research new article' %}">
+      <i class="uk-icon-justify uk-icon-book"></i>
+      Add new compendium entry
+    </a>
+  </li>
 
-    {# Button to add new tags #}
-    <li>
-      <a id="new_tag_link" href="{% url 'research add tag' %}">
-        <button class="uk-button uk-button-primary">
-          <div class="my-1">
-            <i class="uk-icon-justify uk-icon-plus"></i>
-            Add new tag
-          </div>
-        </button>
-      </a>
-    </li>
+  {# Button to add new tags #}
+  <li>
+    <a id="new_tag_link" href="{% url 'research add tag' %}">
+      <i class="uk-icon-justify uk-icon-tag"></i>
+      Add new tag
+    </a>
+  </li>
 
-    {% if request.user.is_staff %}
-    <li>
-      <a id="invite_user_button" href="{% url 'add new user' %}">
-        <button class="uk-button uk-button-primary">
-          <div class="my-1">
-            <i class="uk-icon-justify uk-icon-plus"></i>
-            Invite a new user
-          </div>
-        </button>
-      </a>
-    </li>
-    {% endif %}
-  </ul>
+  {% if request.user.is_staff %}
+  <li>
+    <a id="invite_user_button" href="{% url 'add new user' %}">
+      <i class="uk-icon-justify uk-icon-user"></i>
+      Invite a new user
+    </a>
+  </li>
+  {% endif %}
+</ul>
 
-  </div>
-  <div class="uk-container">
-    <table class="uk-table">
-      <thead>
-        <tr>
-          <th scope="col">#</th>
-          <th scope="col">Title</th>
-          <th scope="col">URL</th>
-          <th scope="col">Tags</th>
-          <th scope="col">Owner</th>
-          <th scope="col">Publisher</th>
-          <th scope="col">Authors</th>
-        </tr>
-      </thead>
-      <tbody>
-          {% for entry in entries %}
-          <tr>
-              <th scope="row">{{ entry.id }}</th>
-              <td>{{ entry.title }}</td>
-              <td>
-                {% if entry.url %}
-                <a href="{{ entry.url }}">
-                  {{ entry.url }}
-                </a>
-                {% endif %}
-              </td>
-              <td>{{ entry.tags }}</td>
-              <td>{{ entry.owner }}</td>
-              <td>{{ entry.publisher_name }}</td>
-              <td>{{ entry.authors }}</td>
-          </tr>
-          {%endfor%}
-      </tbody>
-    </table>
+<div class="uk-block uk-block-secondary uk-contrast">
+  <div class="uk-container uk-container-center">
+    <h2 class="uk-h2">
+      <i class="uk-icon-book"></i>
+      Your compendium entries
+    </h2>
+    {% for entry in entries %}
+      {% include 'includes/entry_snippet.html' with entry=entry only %}
+      <hr>
+    {% endfor %}
   </div>
 </div>
 
